Fixed issue with navigation bar floating up off the screen on multiple reloads. Also fixed the zoomed-in background image for the contact section which was blurry, zoomed out and clear now. Lastly added in some padding top to home screen content section to use of more white space.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,7 +3,10 @@
   /* background-color: #FDFCFA; */
   background-color: black;
   overflow: hidden;
+  position: fixed;
+  width: 100%;
   margin-top: -30px;
+  margin-bottom: 5px;
 }
 
 .App-header > li, a {
