--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -15,7 +15,8 @@ form > textarea {
     color: white;
     background-color: black;
     font-size: 1.2rem;
-    background: url("../Images/birds_flying.jpg") no-repeat center;
+    background: url("../Images/birds_flying.jpg") no-repeat fixed;
+    background-size: 100% 100%;
     height: 100vh;
     letter-spacing: 2px;
     padding: 110px;
